[gd_scene load_steps=4 format=2]

[ext_resource path="res://Entities/TextToVoice/TextToVoice.gd" type="Script" id=1]
[ext_resource path="res://Entities/TextToVoice/Voices/MaleVoice.gd" type="Script" id=2]
[ext_resource path="res://Entities/TextToVoice/Voices/FemaleVoice.gd" type="Script" id=3]
[ext_resource path="res://Entities/TextToVoice/Voices/MonsterVoice.gd" type="Script" id=4]
[ext_resource path="res://Entities/TextToVoice/Voices/Voices.gd" type="Script" id=5]


[node name="TextToVoice" type="AudioStreamPlayer"]
pitch_scale = 0.01
script = ExtResource( 1 )

[node name="Voices" type="Node" parent="."]
script = ExtResource( 5 )

[node name="MaleVoice" type="Node" parent="Voices"]
script = ExtResource( 2 )

[node name="FemaleVoice" type="Node" parent="Voices"]
script = ExtResource( 3 )

[node name="MonsterVoice" type="Node" parent="Voices"]
script = ExtResource( 4 )
